name:                megadeth
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/CIFASIS/megadeth#readme
license:             BSD3
license-file:        LICENSE
author:              Pablo Buiras <buiras@chalmers.se>, Gustavo Grieco <grieco@cifasis-conicet.gov.ar>, Martín Escarrá <mescarra@gmail.com>, Martín Ceresa <martinceresa@gmail.com>
maintainer:          martinceresa@gmail.com
build-type:          Simple
Extra-source-files:  README.md
cabal-version:       >=1.10

Library
  default-language:    Haskell2010
  Exposed-modules:     Megadeth.DeriveArbitrary, Megadeth.DeriveMutation
                       ,Megadeth.DeriveNFData
                       ,Megadeth.Prim
  build-depends:       base >= 4.7 && < 5
                       , template-haskell
                       , QuickCheck
                       , containers
                       , transformers
                       , deepseq
